<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PropertyInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- TODO: Update blank fragment layout -->
        <EditText
            android:id="@+id/et_prop_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/property_name" />

        <EditText
            android:id="@+id/et_prop_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/property_address" />

        <EditText
            android:id="@+id/et_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/area" />

        <EditText
            android:id="@+id/et_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="6"
            android:hint="@string/pin_code" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/location"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="170dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/prop_photo"
            android:textSize="16sp"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:text="@string/photo_desc" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_toEndOf="@id/tv_add_photo"/>

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/iv_add_photo"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_add" />

            <TextView
                android:id="@+id/tv_add_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_below="@id/iv_add_photo"
                android:layout_centerVertical="true"
                android:text="Add Photo"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:layout_alignParentStart="true"
                android:visibility="visible" />

        </RelativeLayout>

        <Button
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:text="@string/continues"
            android:textColor="@android:color/white" />


    </LinearLayout>
</ScrollView>