<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".VisitorInfoFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/like_desc"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/rg_like"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:buttonTint="@color/colorPrimaryDark"
                android:padding="8dp"
                android:checked="true"
                android:text="Yes" />

            <RadioButton
                android:id="@+id/rb_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:buttonTint="@color/colorPrimaryDark"
                android:padding="8dp"
                android:text="No" />

            <RadioButton
                android:id="@+id/rb_need_follow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimaryDark"
                android:padding="8dp"
                android:text="Need to follow up" />
        </RadioGroup>

        <RelativeLayout
            android:id="@+id/rl_schedule_follow_up"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_schedule_follow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schedule_follow_up"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:padding="4dp"
                android:layout_below="@id/tv_schedule_follow"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_date_value"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="4dp"
                android:padding="6dp"
                android:background="@drawable/bg_rectangle_stroke"
                android:layout_toEndOf="@id/tv_date"
                android:layout_below="@id/tv_schedule_follow"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:padding="4dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_below="@id/tv_date"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_time_value"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="8dp"
                android:padding="6dp"
                android:background="@drawable/bg_rectangle_stroke"
                android:layout_toEndOf="@id/tv_time"
                android:layout_below="@id/tv_date"
                android:textColor="@android:color/black"/>



        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/rate_customer"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:progressTint="@color/colorPrimaryDark"
            android:numStars="5"
            android:rating="4.0"
            android:stepSize="1.0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/sale_person_remark"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_sales_remark"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/bg_rectangle_stroke"
            android:gravity="top"
            android:hint="@string/remark"
            android:padding="8dp" />

        <Button
            android:id="@+id/btn_complete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:background="@color/colorPrimaryDark"
            android:text="@string/complete"
            android:textColor="@android:color/white" />

    </LinearLayout>

</ScrollView>