<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".ContactPersonInfoFragment">

        <!-- TODO: Update blank fragment layout -->
        <EditText
            android:id="@+id/et_con_per_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_person_name" />

        <EditText
            android:id="@+id/et_con_per_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_person_contact"
            android:inputType="phone"
            android:maxLength="10" />

        <EditText
            android:id="@+id/et_con_per_alt_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_person_alt_contact"
            android:inputType="phone"
            android:maxLength="10" />

        <Spinner
            android:id="@+id/sp_designation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="4dp"
            android:background="@android:color/black" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/contact_person_pic"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:layout_marginStart="16dp">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/iv_add_pic"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_add"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tv_add_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_add_pic"
                android:layout_marginTop="4dp"
                android:text="Add Photo"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/iv_contact_person"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_toEndOf="@id/tv_add_pic"
                android:layout_marginStart="64dp"
                android:layout_marginTop="18dp"
                android:scaleType="centerCrop"
                android:visibility="visible" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/iv_close"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:visibility="invisible"
                android:src="@drawable/close_cross_square_button"
                android:layout_marginStart="-8dp"
                android:layout_marginBottom="-32dp"
                android:layout_above="@id/iv_contact_person"
                android:layout_toEndOf="@id/iv_contact_person"/>

        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/review"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_review"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_rectangle_stroke"
            android:gravity="top"
            android:hint="Review..."
            android:padding="8dp"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:text="@string/continues"
            android:textColor="@android:color/white" />

    </LinearLayout>
</ScrollView>